--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-pandas==2.0.3
-PyYAML==6.0.2
+matplotlib==3.9.2
+numpy==2.1.2
+pandas==2.2.3
+pymongo==4.10.1
 PyYAML==6.0.2
 Requests==2.32.3
-scikit_learn==1.4.2
+scikit_learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==75.1.0
